@@ -1,2 +1,13 @@
 # jigsaw-start
 Jigsaw Demo Project
+
+Useful Commands
+
+java --list-modules
+java --list-modules java.base
+ 
+javac -d mods --module-source-path src $(find src -name "*.java")
+java -p mods -m com.jigsaw.app/com.jigsaw.app.Main
+jlink --module-path /Library/Java/JavaVirtualMachines/jdk-9.jdk/Contents/Home/jmods:mods --add-modules com.jigsaw.app --output myimage
+
+java -Xdiag:resolver -p mods -m com.jigsaw.app/com.jigsaw.app.Main
